# cloud

./: .bazelignore  .bazelrc  .bazelrc.ci  .dockerignore  .eslintignore  .eslintrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  babel.config.js  bazel_deps.bzl  codecov.yml  deps.bzl  docker-compose copy.yaml  docker-compose.yaml  index.js  jest.config.js  lerna.json  package.json  tsconfig.json
common/fastify/: BUILD.bazel  package.json  tsconfig.json
common/fastify/src/errors/: fastify-errors.ts  index.ts
common/nest/: BUILD.bazel  package.json  tsconfig.json
common/nest/src/: index.ts
common/nest/src/errors/: http-handler.ts  index.ts  mikro-orm-handler.ts  nest-error-handler.ts
common/nest/src/upload/: multipart-options.ts  options.ts  request.ts
common/node/: BUILD.bazel  README.md  package.json  tsconfig.json
common/node/src/: env.ts  fs.ts  index.ts  network.ts  paths.ts  stream.ts  string.ts
common/node/src/env/: index.ts
common/node/src/errors/: app-error.ts  error-handler.ts  index.ts  node-errors.ts
common/node/src/fs/: fs-utils.ts  index.ts
common/node/src/logger/: service-logger.ts
common/node/src/tests/: crypto.test.ts  env.test.ts  fs.test.ts  network.test.ts  stream.test.ts  string.test.ts
common/node/src/utils/: string.ts
common/updates-db/: BUILD.bazel  package.json  tsconfig.json
common/updates-db/src/: distribution-entity.ts  index.ts  patch-entity.ts  release-entity.ts
common/updates-db/src/interfaces/: distribution.ts  patch.ts  release.ts
common/updates-prisma/: .env  BUILD.bazel  package.json  schema.prisma  tsconfig.json
common/utils/: BUILD.bazel  package.json  run_tests.ts  tsconfig.json  tsconfig.spec.json  tsconfig.tests.json
common/utils/src/: array.ts  index.ts  object.ts  string.ts
common/utils/src/tests/: array.test.ts  object.test.ts  string.test.ts
core/updates/: BUILD.bazel  package.json  tsconfig.json
core/updates/src/: asset.ts  distribution.ts  index.ts  release.ts  utils.ts
core/updates/src/tests/: assets-utils.test.ts  utils.test.ts
libs/jira-api/: BUILD.bazel  package.json  tsconfig.json
libs/jira-api/src/: api.ts
libs/jira-api/src/interfaces/: auth.ts  index.ts  issue.ts  project.ts
network/feedback-api/: BUILD.bazel  package.json  tsconfig.json
network/feedback-api/src/: browser-dto.ts  browser-response.ts  index.ts
network/updates-api/: BUILD.bazel  package.json  tsconfig.json
network/updates-api/src/: admin-dto.ts  admin-response.ts  assets-response.ts  download-dto.ts  index.ts  updates-dto.ts  updates-response.ts
network/updates-queue/: BUILD.bazel  package.json  tsconfig.json
network/updates-queue/src/: index.ts
rules/: BUILD.bazel  get_workspace_status.sh  jest.bzl  node.bzl  run_tests.ts  tsconfig.tests.json
rules/typescript/: index.bzl
services/discord/: .env.example  BUILD.bazel  tsconfig.json
services/discord/src/client/: client-connection.ts  client-service.ts
services/discord/src/updates/: message-utils.ts  update-message-template.ts  updates-controller.ts  updates-module.ts
services/feedback/: .env.example  BUILD.bazel  README.md  ecosystem.config.js  nodemon.json  package.json  tsconfig.json
services/feedback/src/: api.ts  app-module.ts  app.ts  feedback-mail-template.ts  feedback-service.ts  index.ts  mail-service.ts
services/feedback/src/api/: api-controller.ts  api-module.ts  api-service.ts  index.ts  jira-templates.ts  jira-utils.ts  upload-filter.ts
services/feedback/src/config/: config-module.ts  config-service.ts  env.ts
services/feedback/src/constants/: config.ts
services/feedback/src/interfaces/: feedback.ts
services/feedback/src/jira/: jira-client.ts  jira-module.ts
services/feedback/src/mail/: mail-service.ts
services/updates/: .env  .env.example  .test.env  BUILD.bazel  ecosystem.config.js  package.json  pm2.js  schema.prisma  tsconfig.app.json  tsconfig.db.json  tsconfig.json  tsconfig.spec.json
services/updates-bot/: BUILD.bazel  tsconfig.json
services/updates-bot/src/: app-module.ts  index.ts
services/updates-bot/src/config/: config-service.ts  env.ts
services/updates-bot/src/discord/: discord-connection.ts  discord-module.ts
services/updates-bot/src/messages/: channel.ts  message-metadata.ts  message-template.ts  message-utils.ts
services/updates-bot/src/updates/: channels.ts  message-template.ts  updates-controller.ts  updates-module.ts  updates-service.ts
services/updates-bot/src/utils/: distribution.ts  messages.ts
services/updates/database/seeder/: database.seeder.ts
services/updates/db/: index.ts  seed.ts
services/updates/e2e/: mikro-orm.ts  patches.test.ts  setup.ts
services/updates/e2e/assets/: 4.0.0.packed.7z  4.0.0.patch
services/updates/e2e/tests/: admin.test.ts  service.test.ts  updates.test.ts
services/updates/prisma/: schema.prisma  seed.ts
services/updates/src/: app-module.ts  app.ts  index.ts  mikro-orm-config.ts  mikro-orm.config.ts  release.entity.ts
services/updates/src/admin/: admin-controller.ts  admin-dto.ts  admin-module.ts  admin-response.ts  admin-service.ts  files-interceptor.ts  upload-files-decorator.ts  upload-filter.ts  uploads-storage.ts  uploads-utils.ts
services/updates/src/api/: api-module.ts  errors.ts  index.ts  upload.ts
services/updates/src/assets/: asset-entity.ts  assets-module.ts  assets-service.ts  assets-utils.ts
services/updates/src/config/: config-service.ts  env.ts
services/updates/src/constants/: env.ts  paths.ts
services/updates/src/distributions/: distribution-entity.ts  distributions-module.ts  distributions-service.ts
services/updates/src/files/: file-utils.ts
services/updates/src/interfaces/: distribution.ts  index.ts  patch.ts  release.ts
services/updates/src/messaging/: messaging-module.ts
services/updates/src/patches/: patch-entity.ts  patches-controller.ts  patches-dto.ts  patches-module.ts  patches-service.ts  update-utils.ts  updates-v1.ts
tools/buildstamp/: BUILD.bazel  defs.bzl  get_workspace_status.sh  stamper.ts
tools/tests/: BUILD.bazel  index.bzl  run_tests.ts  tsconfig.json
(+154 files in other folders)
