package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

exports_files(
    [
        "tsconfig.json",
        "package.json",
        "jest.config.js",
        "jest-reporter.js",
        "babel.config.js",
        "docker-compose.yaml",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "//common/node:srcs",
        "//common/utils:srcs",
    ],
    visibility = ["//:__subpackages__"],
)

pkg_tar(
    name = "cloud-srcs",
    srcs = [
        ":srcs",
    ],
    strip_prefix = ".",
    # Public but bazel-only visibility.
    visibility = ["//:__subpackages__"],
)
