load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//rules:jest.bzl", "jest_test")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "nodejs_test")
load("@npm//codecov:index.bzl", "codecov")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "jest.bzl",
        "node.bzl",
        "tsconfig.tests.json",
        "run_tests.ts",
    ],
)

ts_config(
    name = "tsconfig_tests",
    src = "tsconfig.tests.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_project(
    name = "components_test_runner",
    srcs = ["run_tests.ts"],
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig_tests",
    deps = [
        "@npm//@types/node",
        "@npm//ci-info",
        "@npm//execa",
    ],
)
