load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
        "//common/utils:tsconfig",
    ],
)

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    ["src/**/*.ts"],
    exclude = TEST_FILES,
) + ["index.ts"]

DEPS = [
    "@npm//@types/node",
    "@npm//winston",
    "//common/utils",
]

ts_project(
    name = "components",
    srcs = SRC_FILES,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

js_library(
    name = "node",
    package_name = "@common/node",
    srcs = ["package.json"],
    deps = [":components"],
)
