load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:deps.bzl", "JEST_DEPS")
load("//rules:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig.spec.json",
    deps = [
        "//:tsconfig.json",
    ],
)

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    ["src/**/*.ts"],
    exclude = TEST_FILES,
) + ["index.ts"]

DEPS = [
    "@npm//@types/node",
]

ts_project(
    name = "components",
    srcs = SRC_FILES,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

ts_project(
    name = "components_test",
    srcs = glob(
        TEST_FILES,
    ),
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig_test",
    deps = DEPS + JEST_DEPS + [
        ":components",
    ],
)

js_library(
    name = "utils",
    package_name = "@common/utils",
    srcs = ["package.json"],
    deps = [":components"],
)

jest_test(
    name = "test",
    srcs = [
        ":components_test",
    ],
    env = {},
    deps = DEPS,
)
