load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//tools/tests:index.bzl", "test_suite")
load("//tools/npm:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
    ],
)

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    ["src/**/*.ts"],
    exclude = TEST_FILES,
) + ["index.ts"]

DEPS = [
    "@npm//@types/node",
]

ts_project(
    name = "components",
    srcs = SRC_FILES,
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

filegroup(
    name = "components_test",
    srcs = SRC_FILES + glob(TEST_FILES),
)

test_suite(
    name = "test",
    srcs = [
        ":components_test",
    ],
    coverage = True,
    deps = DEPS,
)

js_library(
    name = "updates",
    package_name = "@core/updates",
    srcs = ["package.json"],
    deps = [":components"],
)

pkg_npm(
    name = "npm",
    package_name = "@wexond/updates-core",
    srcs = ["package.json"],
    substitutions = {
        "@core/updates": "@wexond/updates-core",
    },
    validate = False,
    deps = [
        ":components",
    ],
)
