load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//tools/npm:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "@npm//@types/node",
    "@npm//class-transformer",
    "@npm//class-validator",
]

exports_files(
    [
        "tsconfig.json",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
    ],
)

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    ["src/**/*.ts"],
    exclude = TEST_FILES,
) + ["index.ts"]

ts_project(
    name = "components",
    srcs = SRC_FILES,
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

js_library(
    name = "feedback-api",
    package_name = "@network/feedback-api",
    srcs = ["package.json"],
    deps = [":components"],
)

pkg_npm(
    name = "npm",
    package_name = "@network/feedback-api",
    srcs = ["package.json"],
    substitutions = {
        "@network/feedback-api": "@wexond/feedback-api",
    },
    validate = False,
    deps = [
        ":components",
    ],
)
