load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@npm//@mikro-orm/cli:index.bzl", "mikro_orm")
load("//rules:jest.bzl", "jest_test")
load("//tools/nodejs:index.bzl", "nodejs_app")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "//common/node",
    "//common/fastify",
    "//common/nest",
    "//common/utils",
    "@npm//@types/node",
    "@npm//fastify-helmet",
    "@npm//fastify-formbody",
    "@npm//pg",
    "@npm//reflect-metadata",
    "@npm//@nestjs/common",
    "@npm//@nestjs/core",
    "@npm//@nestjs/platform-fastify",
    "@npm//@nestjs/config",
    "@npm//fastify-multipart",
    "@npm//class-validator",
    "@npm//class-transformer",
    "@npm//rxjs",
    "@npm//@mikro-orm/core",
    "@npm//@mikro-orm/nestjs",
    "@npm//@mikro-orm/postgresql",
    "@npm//@mikro-orm/seeder",
    "@npm//joi",
    "@npm//md5-file",
]

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    [
        "src/**/*.ts",
    ],
    exclude = TEST_FILES,
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
        "//common/fastify:tsconfig",
        "//common/nest:tsconfig",
        "//common/node:tsconfig",
        "//common/utils:tsconfig",
    ],
)

ts_project(
    name = "components",
    srcs = SRC_FILES,
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

nodejs_app(
    name = "updates",
    data = [
        ":components",
    ],
    dev_data = [".env"],
    entry_point = "src/index.ts",
)

ENV_MIKRO_ORM = {
    "MIKRO_ORM_CLI": package_name() + "/src/mikro-orm-config.ts",
}

filegroup(
    name = "assets_e2e",
    srcs = glob(["e2e/assets/**/*"]),
)

filegroup(
    name = "components_test",
    srcs = SRC_FILES + glob(TEST_FILES) + glob([
        "e2e/**/*.ts",
        "db/**/*.ts",
    ]),
)

jest_test(
    name = "test",
    srcs = [
        ":components_test",
        ":schema_drop",
        ":schema_up",
    ],
    e2e = True,
    deps = DEPS + [
        ":assets_e2e",
    ],
)

DEPS_MIKRO_ORM = [
    "//:package.json",
]

mikro_orm(
    name = "schema_up",
    args = [
        "schema:update",
        "--run",
        "--fk-checks",
    ],
    data = DEPS_MIKRO_ORM,
    env = ENV_MIKRO_ORM,
    tags = [
        "manual",
        "schema_up",
    ],
)

mikro_orm(
    name = "schema_drop",
    args = [
        "schema:drop",
        "--run",
        "--fk-checks",
        "--drop-migrations-table",
    ],
    data = DEPS_MIKRO_ORM,
    env = ENV_MIKRO_ORM,
    tags = [
        "manual",
        "schema_drop",
    ],
)
